<?xml version="1.0"?>
<package format="2">
    <name>odom-lidar-pf</name>
    <version>0.0.1</version>
    <description>odom-lidar-pf</description>
    <license>BSD</license>
    <author email="user@user.com">user</author>
    <maintainer email="user@user.com">user</maintainer>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>turtlebot3_gazebo</depend>
    <depend>turtlebot3_teleop</depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>rospy</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>eigen</depend>
    <depend>cv_bridge</depend>
    <depend>image_transport</depend>
    <depend>tf</depend>

    <export>
        <gazebo_ros gazebo_media_path="${prefix}"/>
    </export>
</package>